--- a/gestion_voluntarios/view/voluntario_test_view.html
+++ b/gestion_voluntarios/view/voluntario_test_view.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Bootstrap Font Icon CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <!-- My Styles -->
+    <link rel="stylesheet" href="{% static 'voluntario_styles.css' %}">
 </head>
 <body>
     <div class="d-flex justify-content-center">
@@ -15,7 +18,7 @@
 
     <p>Nombre: {{ voluntario.nombre }} {{ voluntario.apellido }}</p>
     <p>Edad: {{ voluntario.edad }}</p>
-    <div class="d-flex flex-row">
+    <div class="d-flex flex-row mb-3">
         <h2 class="me-3">Habilidades</h2>
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#habilidadesModal">
           <i class="bi bi-plus"></i>
@@ -26,7 +29,7 @@
         <div class="container">
             <table id="table-habilidades" class="table">
                 <thead class="header-table">
-                    <tr>
+                    <tr class="table-primary">
                         <th scope="col">Título</th>
                         <th scope="col">Descripción</th>
                         <th scope="col">Acciones</th>
@@ -37,7 +40,7 @@
                     <tr>
                         <td>{{ habilidad.titulo }}</td>
                         <td>{{ habilidad.descripcion }}</td>
-                        <td><i class="bi bi-trash-fill"></i></td>
+                        <td><i class="bi bi-trash-fill" style="cursor: pointer"></i></td>
                     </tr>
                 {% endfor %}
                 </tbody>
@@ -45,14 +48,13 @@
         </div>
     {% else %}
         <div class="d-flex justify-content-center align-items-center">
-            <p class="d-flex justify-content-center mt-2"
-               style="background-color: #ffd454; color: black; width: 80%; border-radius: 20px; padding: 5px 0;">
+            <p class="d-flex justify-content-center mt-2 advertencia-voluntario">
                 Este voluntario no tiene habilidades registradas
             </p>
         </div>
     {% endif %}
 
-    <div class="d-flex flex-row">
+    <div class="d-flex flex-row mb-3">
         <h2 class="me-3">Horario</h2>
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#horarioModal">
           <i class="bi bi-plus"></i>
@@ -63,7 +65,7 @@
         <div class="container">
             <table id="table-horario" class="table">
                 <thead class="header-table">
-                    <tr>
+                    <tr class="table-primary">
                         <th scope="col">Día de la semana</th>
                         <th scope="col">Hora de inicio</th>
                         <th scope="col">Hora de fin</th>
@@ -76,7 +78,7 @@
                         <td>{{ periodo.diaSemana }}</td>
                         <td>{{ periodo.horaInicio }}</td>
                         <td>{{ periodo.horaFin }}</td>
-                        <td><i class="bi bi-trash-fill"></i></td>
+                        <td><i class="bi bi-trash-fill" style="cursor: pointer"></i></td>
                     </tr>
                 {% endfor %}
                 </tbody>
@@ -84,8 +86,7 @@
         </div>
     {% else %}
         <div class="d-flex justify-content-center align-items-center">
-            <p class="d-flex justify-content-center mt-2"
-               style="background-color: #ffd454; color: black; width: 80%; border-radius: 20px; padding: 5px 0">
+            <p class="d-flex justify-content-center mt-2 advertencia-voluntario">
                 Este voluntario no tiene un horario registrado.
             </p>
         </div>
@@ -102,8 +103,14 @@
             </button>
           </div>
           <div class="modal-body">
-            Seleccione una o varias habilidades nuevas:
+            <span>Seleccione una o varias habilidades nuevas:</span><br>
+            {% for habilidadCatalogo in catalogoHabilidades %}
+                <div style="margin: 5px 0">
+                    <input type="checkbox" class="btn-check" id="{{ habilidadCatalogo }}" checked autocomplete="off">
+                    <label class="btn btn-outline-secondary" for="{{ habilidadCatalogo }}">{{ habilidadCatalogo }}</label>
+                </div>
 
+            {% endfor %}
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-primary">Agregar habilidades</button>
@@ -124,7 +131,27 @@
             </button>
           </div>
           <div class="modal-body">
-            Ingrese la información del nuevo horario:
+            <span>Ingrese la información del nuevo horario:</span><br>
+            <div class="d-flex justify-content-around">
+                <select class="form-select" aria-label="Dia de la semana" style="margin: 0 5px">
+                    <option selected>Seleccione el día de la semana</option>
+                    {% for diaSemana in diasSemana %}
+                        <option>{{ diaSemana }}</option>
+                    {% endfor %}
+                </select>
+                <select class="form-select" aria-label="Hora de inicio" style="margin: 0 5px">
+                    <option selected>Seleccione una hora de inicio</option>
+                    {% for hora in horasPeriodo %}
+                        <option>{{ hora }}</option>
+                    {% endfor %}
+                </select>
+                <select class="form-select" aria-label="Hora de fin" style="margin: 0 5px">
+                    <option selected>Seleccione una hora de fin</option>
+                    {% for hora in horasPeriodo %}
+                        <option>{{ hora }}</option>
+                    {% endfor %}
+                </select>
+            </div>
 
           </div>
           <div class="modal-footer">
