--- a/gestion_voluntarios/view/index.html
+++ b/gestion_voluntarios/view/index.html
@@ -1,4 +1,4 @@
-{% load static %}
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Sistema-de</title>
-	<link rel="stylesheet" href="{% static '/templates/gestion_voluntarios/styles.css' %}">
+	<link rel="stylesheet" href="../static/templates/gestion_voluntarios/styles.css">
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script>
 		$(document).ready(function(){
