--- a/gestion_voluntarios/templates/gestion_voluntarios/asignar_voluntarios.html
+++ b/gestion_voluntarios/templates/gestion_voluntarios/asignar_voluntarios.html
@@ -9,80 +9,108 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-        crossorigin="anonymous"></script>
+            integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+            crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Actividad</th>
-                <th scope="col">Voluntarios</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for actividad in actividades %}
-            <tr>
-                <th scope="row">{{ actividad.id }}</th>
-                <td>{{ actividad.nombre }}</td>
-                <td>
-                    <ul class="voluntarios-list" style="list-style-type: none; padding-left: 0">
-                        {% for voluntario in actividad.voluntarios.all %}
-                        <li>{{ voluntario.nombre }}</li>
-                        {% endfor %}
-                    </ul>
-                    <input class="btn btn-primary" type="button" value="Asignar voluntarios" data-bs-toggle="modal"
-                        data-bs-target="#voluntariosModal" data-voluntarios="{{ voluntarios }}" data-actividad="{{ actividad.id }}">
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    <div class="modal fade" id="voluntariosModal" tabindex="-1" aria-labelledby="voluntariosModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="voluntariosModalLabel">Lista de voluntarios</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                <form method="post" action="{%  url 'asignar_voluntarios' %}">
-                        {% csrf_token %}
-                <input type="hidden" name="actividad_id" value="{{ actividad.id }}" id="actividad_id">
-{#                <input type="hidden" name="actividad_id" value="{{ actividad.id }}" id="actividad_id">#}
-                    {% for voluntario in voluntarios %}
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" name="voluntarios" value="{{ voluntario.id }}">
-                        <label class="form-check-label">
-                            {{ voluntario.nombre }}
-                        </label>
-                    </div>
+<table class="table">
+    <thead>
+    <tr>
+        <th scope="col">ID</th>
+        <th scope="col">Emergencia</th>
+        <th scope="col">Actividades</th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for emergencia in emergencias %}
+        <tr>
+            <th scope="row">{{ emergencia.id }}</th>
+            <td>{{ emergencia.nombre }}</td>
+            <td>
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">ID</th>
+                        <th scope="col">Nombre:</th>
+                        <th scope="col">Voluntarios</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for actividad in emergencia.actividades.all %}
+                        <tr>
+                            <th scope="row">{{ actividad.id }}</th>
+                            <td>{{ actividad.nombre }}</td>
+                            <td>
+                                <ul class="voluntarios-list" style="list-style-type: none; padding-left: 0">
+                                    {% for voluntario in actividad.voluntarios.all %}
+                                        <li>{{ voluntario.nombre }}</li>
+                                    {% endfor %}
+                                </ul>
+                                <input class="btn btn-primary" type="button" value="Asignar voluntarios"
+                                       data-bs-toggle="modal"
+                                       data-bs-target="#voluntariosModal" data-voluntarios="{{ voluntarios }}"
+                                       data-actividad="{{ actividad.id }}">
+                            </td>
+                        </tr>d
                     {% endfor %}
-                <div class="modal-footer">
-                        <button type="submit" class="btn btn-secondary" data-bs-dismiss="modal" id="cerrar-btn" name="cerrar">Cerrar</button>
-                        <button type="submit" class="btn btn-primary" id="btn-asignar-voluntario" name="guardar">Guardar</button>
-                </div>
+                    </tbody>
+                </table>
+            </td>
+        </tr>
+    {% endfor %}
+    </tbody>
+</table>
+
+<!-- ESTA PARTE SE DEBE MODIFICAR PARA MOSTRAR LOS VOLUNTARIOS DE DICHA EMERGENCIA-->
+<div class="modal fade" id="voluntariosModal" tabindex="-1" aria-labelledby="voluntariosModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="voluntariosModalLabel">Lista de voluntarios</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form method="post" action="{% url 'asignar_voluntarios' %}">
+                    {% csrf_token %}
+                    <input type="hidden" name="actividad_id" value="{{ actividad.id }}" id="actividad_id">
+                    {#                <input type="hidden" name="actividad_id" value="{{ actividad.id }}" id="actividad_id">#}
+                    {% for voluntario in voluntarios %}
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" name="voluntarios"
+                                   value="{{ voluntario.id }}">
+                            <label class="form-check-label">
+                                {{ voluntario.nombre }}
+                            </label>
+                        </div>
+                    {% endfor %}
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-secondary" data-bs-dismiss="modal" id="cerrar-btn"
+                                name="cerrar">Cerrar
+                        </button>
+                        <button type="submit" class="btn btn-primary" id="btn-asignar-voluntario" name="guardar">
+                            Guardar
+                        </button>
+                    </div>
                 </form>
-                </div>
             </div>
         </div>
     </div>
+</div>
 
-    <input class="btn btn-primary me-4 float-end" type="button" value="Continuar">
-    <script>
-        $(document).ready(function() {
-            $('#voluntariosModal').on('show.bs.modal', function(event) {
-                var button = $(event.relatedTarget);
-                var actividad_id = button.data('actividad');
-                var modal = $(this);
-                modal.find('#actividad_id').val(actividad_id);
-                });
-            });
-    </script>
+<input class="btn btn-primary me-4 float-end" type="button" value="Continuar">
+<script>
+    $(document).ready(function () {
+        $('#voluntariosModal').on('show.bs.modal', function (event) {
+            var button = $(event.relatedTarget);
+            var actividad_id = button.data('actividad');
+            var modal = $(this);
+            modal.find('#actividad_id').val(actividad_id);
+        });
+    });
+</script>
 </body>
 </html>
