--- a/gestion_voluntarios/templates/gestion_voluntarios/asignar_voluntarios.html
+++ b/gestion_voluntarios/templates/gestion_voluntarios/asignar_voluntarios.html
@@ -13,6 +13,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
             crossorigin="anonymous"></script>
+
+    <!--VARIABLE PARA EL DICCIONARIO-->
+    <script type="text/javascript">
+        var voluntarios_por_emergencia = [];
+    </script>
+
 </head>
 
 <body>
@@ -28,7 +34,25 @@
     {% for emergencia in emergencias %}
         <tr>
             <th scope="row">{{ emergencia.id }}</th>
-            <td>{{ emergencia.nombre }}</td>
+            <td>{{ emergencia.nombre }}
+
+                <!--CAPTURA DE LOS VOLUNTARIOS EN FUNCIÓN DE LA EMERGENCIA-->
+                <script type="text/javascript">
+                voluntarios_por_emergencia.push({ key: "Emergencia{{emergencia.id}}", value :
+                    [
+                        {% for voluntario in emergencia.voluntarios.all %}
+                            {
+                                id: "{{ voluntario.id }}",
+                                nombre: "{{ voluntario.nombre }}",
+                                es_asignado:"{{ voluntario.es_asignado }}"
+                            },
+                        {% endfor %}
+                    ]
+                });
+                </script>
+
+            </td>
+
             <td>
                 <table class="table">
                     <thead>
@@ -52,7 +76,6 @@
                                 <input class="btn btn-primary" type="button" value="Asignar voluntarios"
                                        data-bs-toggle="modal"
                                        data-bs-target="#voluntariosModal"
-                                       data-voluntarios="{{ emergencia.voluntarios.all }}"
                                        data-actividad="{{ actividad.id }}"
                                        data-emergencia="{{ emergencia.id }}">
                             </td>
@@ -81,18 +104,11 @@
                     <input type="hidden" name="actividad_id" value="" id="actividad_id">
                     <input type="hidden" name="emergencia_id" value="" id="emergencia_id">
 
-                    {% for voluntario in voluntarios %}
-                        <!-- SE DEBE MOSTRAR SOLO LOS VOLUNTARIOS QUE TENGAN EL ID DE LA EMERGENCIA NECESARIA -->
-                        {% if voluntario.emergencia_id == '1' %}
-                            <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="voluntarios"
-                                   value="{{ voluntario.id }}">
-                            <label class="form-check-label">
-                                {{ voluntario.nombre }}
-                            </label>
-                        </div>
-                        {% endif %}
-                    {% endfor %}
+                    <!--DIV QUE MUESTRA EL CONTENIDO AL EJECUTARSE EL BOTÓN -->
+                    <!--CÓDIGO EN LA LÍNEA 138 (BORRAR) 147(CONTENIDO) -->
+                    <div id="voluntarios_emergencia">
+                    </div>
+
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-secondary" data-bs-dismiss="modal" id="cerrar-btn"
                                 name="cerrar">Cerrar
@@ -111,9 +127,28 @@
 <script>
     $(document).ready(function () {
         $('#voluntariosModal').on('show.bs.modal', function (event) {
+            //debugger;
             var button = $(event.relatedTarget);
             var actividad_id = button.data('actividad');
             var emergencia_id = button.data('emergencia');
+            var voluntarios_emergencia_seleccionada = null;
+
+            //Se debe limpiar la instancia
+            $('#voluntarios_emergencia').empty();
+
+            //se recorre el diccionario en función del id de la emergencia
+            voluntarios_por_emergencia.forEach(function (item_emergencia){
+                if(item_emergencia.key == "Emergencia"+emergencia_id.toString()){
+                    voluntarios_emergencia_seleccionada = item_emergencia.value;
+                }
+            })
+
+            //se agregan los voluntarios para imprimirse en el div de la línea 109
+            voluntarios_emergencia_seleccionada.forEach(function (voluntarioFor){
+                    $('#voluntarios_emergencia').append("<input class='form-check-input' type='checkbox' name='ids_voluntarios' value='"+voluntarioFor.id+"'/><label class='form-check-label' >"+voluntarioFor.nombre+"</label><br/>");
+                }
+            );
+
             var modal = $(this);
             modal.find('#actividad_id').val(actividad_id);
             modal.find('#emergencia_id').val(emergencia_id);
