--- a/gestion_voluntarios/templates/gestion_voluntarios/asignar_voluntarios.html
+++ b/gestion_voluntarios/templates/gestion_voluntarios/asignar_voluntarios.html
@@ -44,6 +44,7 @@
                             {
                                 id: "{{ voluntario.id }}",
                                 nombre: "{{ voluntario.nombre }}",
+                                apellido: "{{ voluntario.apellido }}",
                                 es_asignado:"{{ voluntario.es_asignado }}"
                             },
                         {% endfor %}
@@ -145,7 +146,12 @@
 
             //se agregan los voluntarios para imprimirse en el div de la línea 109
             voluntarios_emergencia_seleccionada.forEach(function (voluntarioFor){
-                    $('#voluntarios_emergencia').append("<input class='form-check-input' type='checkbox' name='ids_voluntarios' value='"+voluntarioFor.id+"'/><label class='form-check-label' >"+voluntarioFor.nombre+"</label><br/>");
+                    $('#voluntarios_emergencia').append(
+                        "<input class='form-check-input' type='checkbox' name='ids_voluntarios' " +
+                        "value='"+voluntarioFor.id+"'/>" +
+                        "<label class='form-check-label' >"+voluntarioFor.nombre+"</label>" + " " +
+                        "<label class='form-check-label' >"+voluntarioFor.apellido+"</label>" +
+                        "<br/>");
                 }
             );
 
