--- a/gestion_voluntarios/view/asignar_voluntarios.html
+++ b/gestion_voluntarios/view/asignar_voluntarios.html
@@ -71,7 +71,7 @@
                             <td>
                                 <ul class="voluntarios-list" style="list-style-type: none; padding-left: 0">
                                     {% for voluntario in actividad.voluntarios.all %}
-                                        <li>{{ voluntario.nombre }}</li>
+                                        <li>{{ voluntario.nombre }} {{ voluntario.apellido }}</li>
                                     {% endfor %}
                                 </ul>
                                 <input class="btn btn-primary" type="button" value="Asignar voluntarios"
@@ -125,6 +125,7 @@
 </div>
 
 <input class="btn btn-primary me-4 float-end" type="button" value="Continuar">
+
 <script>
     $(document).ready(function () {
         $('#voluntariosModal').on('show.bs.modal', function (event) {
@@ -148,7 +149,7 @@
             voluntarios_emergencia_seleccionada.forEach(function (voluntarioFor){
                     $('#voluntarios_emergencia').append(
                         "<input class='form-check-input' type='checkbox' name='ids_voluntarios' " +
-                        "value='"+voluntarioFor.id+"'/>" +
+                        "value='"+voluntarioFor.id+"'/>" + "    "+
                         "<label class='form-check-label' >"+voluntarioFor.nombre+"</label>" + " " +
                         "<label class='form-check-label' >"+voluntarioFor.apellido+"</label>" +
                         "<br/>");
